* Curve: display of posts had a gap in IE6 (ie6.css) [Bug 3496]
git-svn-id: https://devel.simplemachines.org/code/smf/trunk@8613 a96bbafc-d752-43aa-a6db-eed64a5f2cf9

--- a/Themes/curve/css/ie6.css
+++ b/Themes/curve/css/ie6.css
@@ -96,9 +96,15 @@
 /* **************** */
 /* from Display.template */
 /* **************** */
+#forumposts .postarea
+{
+	margin-left: 0px;
+	float: right;
+}
 #forumposts .postarea .post
 {
 	float: none;
+	margin-top: 10px;
 }
 .buttonlist ul li
 {
@@ -114,7 +120,7 @@
 {
 	margin-top: 8px;
 	clear: both;
-}		
+}
 
 /* ******************* */
 /* Admin.template */
